# docs/swagger.json
@@ -16,9 +16,9 @@
     "host": "localhost:3000",
     "basePath": "/",
     "paths": {
-        "/analytics/average-delivery-time": {
+        "/admin/dashboard": {
             "get": {
-                "description": "get average delivery time data",
+                "description": "get dashboard data",
                 "consumes": [
                     "application/json"
                 ],
@@ -26,18 +26,33 @@
                     "application/json"
                 ],
                 "tags": [
-                    "analytics"
+                    "admin"
                 ],
-                "summary": "Get average delivery time",
+                "summary": "Get dashboard",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "GetAverageDeliveryTime",
+                        "description": "Dashboard data",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "Error",
+                        "description": "Bad server",
                         "schema": {
                             "type": "string"
                         }
@@ -45,9 +60,9 @@
                 }
             }
         },
-        "/analytics/most-expensive-sale": {
-            "get": {
-                "description": "get most expensive sale data",
+        "/auth/checkout": {
+            "post": {
+                "description": "checkout",
                 "consumes": [
                     "application/json"
                 ],
@@ -55,18 +70,42 @@
                     "application/json"
                 ],
                 "tags": [
-                    "analytics"
+                    "auth"
                 ],
-                "summary": "Get most expensive sale",
+                "summary": "Checkout",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Order details",
+                        "name": "Order",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_ICOMP-UNC_newworld-FlorSchroder_internal_models.Order"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "GetMostExpensiveSale",
+                        "description": "Order placed",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_ICOMP-UNC_newworld-FlorSchroder_internal_models.Message"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "Error",
+                        "description": "Bad server",
                         "schema": {
                             "type": "string"
                         }
@@ -107,6 +146,207 @@
                     },
                     "400": {
                         "description": "Bad request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Bad server",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/offer": {
+            "post": {
+                "description": "add a new offer",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Add offer",
+                "parameters": [
+                    {
+                        "description": "Offer details",
+                        "name": "Offer",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_ICOMP-UNC_newworld-FlorSchroder_internal_models.Offer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "JWT",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Bad server",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/offers": {
+            "get": {
+                "description": "get all offers",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Get offers",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "JWT",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Bad server",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/order/{id}": {
+            "patch": {
+                "description": "update order status",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Update order status",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Order ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "JWT",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Order status",
+                        "name": "status",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Order status updated",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Bad server",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/orders/{id}": {
+            "get": {
+                "description": "get order status",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Get order status",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Order ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "JWT",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Order status",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "type": "string"
                         }
@@ -165,35 +405,6 @@
                     }
                 }
             }
-        },
-        "/market": {
-            "get": {
-                "description": "get market summary data",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "market"
-                ],
-                "summary": "Get market summary",
-                "responses": {
-                    "200": {
-                        "description": "GetSummaryMarket",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -216,6 +427,68 @@
                 "username": {
                     "type": "string",
                     "example": "johndoe"
+                }
+            }
+        },
+        "github_com_ICOMP-UNC_newworld-FlorSchroder_internal_models.Message": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                },
+                "total": {
+                    "type": "number"
+                }
+            }
+        },
+        "github_com_ICOMP-UNC_newworld-FlorSchroder_internal_models.Offer": {
+            "type": "object",
+            "required": [
+                "category",
+                "name",
+                "price",
+                "quantity"
+            ],
+            "properties": {
+                "category": {
+                    "description": "Category of the offer",
+                    "type": "string",
+                    "example": "food"
+                },
+                "name": {
+                    "description": "Name of the offer",
+                    "type": "string",
+                    "example": "meat"
+                },
+                "price": {
+                    "description": "Price of the offer",
+                    "type": "number",
+                    "example": 10.5
+                },
+                "quantity": {
+                    "description": "Quantity of the offer",
+                    "type": "integer",
+                    "example": 10
+                }
+            }
+        },
+        "github_com_ICOMP-UNC_newworld-FlorSchroder_internal_models.Order": {
+            "type": "object"
+        },
+        "github_com_ICOMP-UNC_newworld-FlorSchroder_internal_models.OrderItem": {
+            "type": "object",
+            "required": [
+                "product_id",
+                "quantity"
+            ],
+            "properties": {
+                "product_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "quantity": {
+                    "type": "integer",
+                    "example": 10
                 }
             }
         },
